--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "prettier src/**/*.js --write"
+    "lint": "prettier src/**/*.js src/*.js --write"
   },
   "eslintConfig": {
     "extends": [
